--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 }
 .navbar a {
   text-decoration: none;
-  color: black;
+  color: royalblue;
 }
 .r-nav ul li a:hover {
   border-bottom: 1.5px solid gray;
